# //system — workspace's root for the `system` package.
#
# Re-exports every .art file under system/ as a single filegroup so
# downstream manifest builds depend on the full system tree. The
# directory is the namespace anchor for `import system.*`, and the
# on-disk layout mirrors the package FQN 1:1 (system/services/<fc>/ →
# system.services.<fc>, system/apps/ → system.apps, …).
#
# The whole tree is real files now — the .art definitions were
# consolidated here from the per-component <component>/system/ dirs, so
# the glob below picks up the entire tree directly (no symlinks to
# chase). The runtime package declares
# `package system.platform.runtime`, so its .art lives at
# system/platform/runtime/package.art (FQN mirrors path here too).

filegroup(
    name = "art_sources",
    srcs = glob(
        ["**/*.art"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)
