# //system — workspace's root for the `system` package.
#
# Re-exports every .art file under system/ as a single filegroup so
# downstream manifest builds depend on the full system tree. The
# directory is the namespace anchor for `import system.*`, and the
# on-disk layout mirrors the package FQN 1:1 (system/services/<fc>/ →
# system.services.<fc>, system/apps/ → system.apps, …).
#
# The whole tree is real files now — the .art definitions were
# consolidated here from the per-component <component>/system/ dirs, so
# the glob below picks up the entire tree directly (no symlinks to
# chase). The runtime package declares
# `package system.platform.runtime`, so its .art lives at
# system/platform/runtime/package.art (FQN mirrors path here too).

# NOTE: a `glob(["**/*.art"])` here would ONLY see this package's own files —
# system/services, system/supervisor, system/platform/* and system/tools each
# carry their own BUILD (sub-packages), and a glob never crosses a package
# boundary. So aggregate the per-package .art exports explicitly; this is the
# single dep a manifest build (or the theia-system-dev deb) takes to get the
# WHOLE system/ contract tree at its FQN-mirrored short_paths.
filegroup(
    name = "art_sources",
    srcs = [
        # This package's own .art (system.art + tools/tdb/tdb.art live here —
        # tools/tdb has no BUILD, so it belongs to //system).
        "system.art",
        "tools/tdb/tdb.art",
        # Sub-packages.
        "//system/services:services_manifest",
        "//system/supervisor:supervisor_art_srcs",
        "//system/platform/runtime:package.art",
        "//system/platform/msgs/std:package.art",
        "//system/platform/msgs/sensor:package.art",
        "//system/platform/msgs/geometry:package.art",
        "//system/platform/msgs/nav:package.art",
    ],
    visibility = ["//visibility:public"],
)

# The art_sources tree MINUS the services .art subtree — used by
# theia-system-dev packaging. The services .art (/opt/theia/system/services) is
# owned by theia-services-dev (a hard Depends of theia-system-dev), so shipping
# it here too would duplicate it. system.art itself IS included (it imports
# system.services.*, which resolves because services-dev is always co-present).
filegroup(
    name = "art_sources_no_services",
    srcs = [
        "system.art",
        "tools/tdb/tdb.art",
        "//system/supervisor:supervisor_art_srcs",
        "//system/platform/runtime:package.art",
        "//system/platform/msgs/std:package.art",
        "//system/platform/msgs/sensor:package.art",
        "//system/platform/msgs/geometry:package.art",
        "//system/platform/msgs/nav:package.art",
    ],
    visibility = ["//visibility:public"],
)
