[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-theia"
version = "0.1.0"
description = "Robot Framework testing harness for the theia/artheia stack."
requires-python = ">=3.10"
dependencies = [
    "robotframework>=7.0",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "numpy",
    "pandas",
    "asteval",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
rf-theia-mcp = "rf_theia.adapters.mcp_server:main"

[tool.setuptools.packages.find]
# Ship the harness (library, adapters, runtime, testkit, the shipped scenario
# suites) but NOT the self-test scenarios — `scenarios/_selftest/` is Theia's own
# regression suite, kept in-repo for CI and deliberately excluded from the
# distributed package. (The scenario dirs are PEP-420 namespace packages, so they
# are otherwise picked up by `rf_theia*`.)
include = ["rf_theia*"]
exclude = ["rf_theia.scenarios._selftest", "rf_theia.scenarios._selftest.*"]

[tool.pytest.ini_options]
# The on-disk dir is `_selftest` (leading underscore). pytest runs the self-test
# suite from the repo; it is not part of the distributed package (see find.exclude).
testpaths = ["rf_theia/scenarios/_selftest"]
