"""Bazel cross-compilation target platforms for pero_theia.

Lives under ``toolchains/`` because each ``platform()`` here pairs with
one ``cc_toolchain()`` defined in a sibling directory
(``toolchains/ti_arm_cgt_18/``, ``toolchains/arm_gcc_7_2017q4/``).

Label form:
    //toolchains:linux_x86_64
    //toolchains:tms570lc43xx_ti
    //toolchains:tms570lc43xx_gcc

The constraint setting+values defined here (mcu_core, endianness, fpu,
c_compiler) are referenced from the toolchain BUILD files as
``//toolchains:cortex_r4f`` etc.
"""

package(default_visibility = ["//visibility:public"])

# ── Host ──────────────────────────────────────────────────────────────────
platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# ── Hercules TMS570LC43xx (Cortex-R4F, big-endian, FPU) ──────────────────
platform(
    name = "tms570lc43xx",
    constraint_values = [
        "@platforms//os:none",
        "@platforms//cpu:arm",
        ":cortex_r4f",
        ":big_endian",
        ":fpu_vfpv3_d16",
    ],
)

# ── CPU constraints ────────────────────────────────────────────────────────
constraint_setting(name = "mcu_core")

constraint_value(
    name = "cortex_r4f",
    constraint_setting = ":mcu_core",
)

# ── Endianness constraints ─────────────────────────────────────────────────
constraint_setting(name = "endianness")

constraint_value(
    name = "big_endian",
    constraint_setting = ":endianness",
)

constraint_value(
    name = "little_endian",
    constraint_setting = ":endianness",
)

# ── FPU constraints ────────────────────────────────────────────────────────
constraint_setting(name = "fpu")

constraint_value(
    name = "fpu_vfpv3_d16",
    constraint_setting = ":fpu",
)

constraint_value(
    name = "no_fpu",
    constraint_setting = ":fpu",
)

# ── Compiler-type constraint ───────────────────────────────────────────────
# Used in BUILD select() to emit the correct compiler flags.
constraint_setting(name = "c_compiler")

constraint_value(
    name = "ti_armcl",
    constraint_setting = ":c_compiler",
)

constraint_value(
    name = "gcc_arm",
    constraint_setting = ":c_compiler",
)

# ── TMS570 platform variants: one per toolchain ───────────────────────────
platform(
    name = "tms570lc43xx_ti",
    parents = [":tms570lc43xx"],
    constraint_values = [":ti_armcl"],
)

platform(
    name = "tms570lc43xx_gcc",
    parents = [":tms570lc43xx"],
    constraint_values = [":gcc_arm"],
)
