"""Bazel target platforms for pero_theia.

The host build platform. The Hercules/TMS570 firmware cross-platforms
(tms570lc43xx_ti/_gcc + their cortex-r4f/endianness/fpu/c_compiler
constraints) were removed with the ti_arm_cgt_18 + arm_gcc_7_2017q4
toolchains — the gateway firmware that used them lives in gataway_ws now.
The rpi4 aarch64 cross lives in toolchains/aarch64_linux_gnu/.

Label form:
    //toolchains:linux_x86_64
"""

package(default_visibility = ["//visibility:public"])

# ── Host ──────────────────────────────────────────────────────────────────
platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)
