# //proto:platform_protos — the nanopb wire types the gen-app lib links. This
# workspace builds its OWN app proto (system/apps, nanopb-compiled below) + pulls
# the runtime control proto from @pero_theia. (The framework aggregates all the
# FC protos under //platform/proto; a consuming workspace only needs its own app
# proto + the runtime one — the lib #includes "system/apps/apps.pb.h". The app
# proto lives under proto/, never mixed with the framework's platform/proto/.)
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "platform_protos",
    srcs = ["//proto/system/apps:apps_pb_c"],
    hdrs = ["//proto/system/apps:apps_pb_h"],
    includes = ["."],   # callers #include "system/apps/apps.pb.h"
    copts = ["-fPIC"],
    deps = ["@pero_theia//platform/runtime:runtime_proto_cc"],
)
