"""demo/sm_broadcast — in-process integration test for SM's broadcast.

Drives sm + 4 cooperation partners (exec/com/ucm/per) in one process
and asserts each partner observes the state changes via its own
GenServer mailbox. See test_sm_broadcast.cc for the contract being
exercised — it's the in-process equivalent of what a TIPC-published
SmStateStream will look like once cross-process publication lands.
"""

load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "test_sm_broadcast",
    srcs = ["test_sm_broadcast.cc"],
    copts = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
    ],
    deps = [
        "//platform/runtime:runtime",
        # SM is now gen-app emitted with the same lib/main/impl shape
        # as the partners — lib + impl pulled in directly.
        "//services/sm/lib:sm_lib",
        "//services/sm/impl:sm_impl",
        "//services/system/exec/lib:exec_lib",
        "//services/com/lib:com_lib",
        "//services/ucm/lib:ucm_lib",
        "//services/per/lib:per_lib",
        "//services/system/exec/impl:exec_impl",
        "//services/com/impl:com_impl",
        "//services/ucm/impl:ucm_impl",
        "//services/per/impl:per_impl",
    ],
    linkopts = [
        "-lpthread",
        "-l:libprotobuf-nanopb.a",
    ],
)
