# packaging/theia — Theia's OWN Debian packages (the ROS2-style decomposition).
#
# Five independent packages over the clean dependency DAG:
#
#   theia-framework  artheia Python wheel + bazel rules        (built by `theia
#                    release`, not here — pure-Python `Architecture: all`)
#   theia-runtime    runtime SOURCES + supervisor binary +     ← pkg_deb below
#                    tombstone + runtime protos (+ tdb python)
#   theia-services   com/per/sm/ucm/log/shwa binaries +        ← pkg_deb below
#                    services protos
#   theia-tools      supervisor-GUI + rtdb (need com gRPC)     (GUI is a CMake
#                    build, staged by `theia release`)
#   theia-rf         rf_theia harness wheel (minus _selftest)  (built by `theia
#                    release` — pure-Python `Architecture: all`)
#
# The C++ packages (runtime, services) are bazel pkg_deb targets here, built per
# --platforms=//rules/config:{host,rpi4} for amd64/arm64. The Python packages
# (framework, rf) wrap a `pip wheel` artifact and the GUI a CMake binary — those
# are assembled by `theia release` (theia.py), which also emits the matching
# .ipk under dist/ipkg/ for embedded targets.
#
# Layout convention: everything lands under /opt/theia (THEIA_ROOT_DIR), bin/
# entries become 0755. Mirrors the install stage (_stage_local in theia.py /
# deploy/ansible tasks install-bundle.yml + setcap.yml).

load("//rules:deb.bzl", "pkg_deb")
load("//rules:opkg.bzl", "pkg_opkg")

package(default_visibility = ["//visibility:public"])

_VERSION = "0.1.0"

# Debian runtime/-dev split: a RUNTIME-ONLY machine gets just the binaries (+ the
# shared libs they link); everything build-time — sources, headers, protos, the
# .art tree, the Python manifest — lives in the matching -dev package, which
# Depends on the runtime one. A target that only RUNS Theia installs
# theia-runtime [+ theia-services]; a workspace that BUILDS apps adds the -dev's.

# ── theia-runtime (machine) ──────────────────────────────────────────────────
# Just the supervisor binary — the fabric an app system runs under. No build
# artifacts. tdb (python probe) is added by `theia release` (no bazel artifact).
pkg_deb(
    name = "theia-runtime_deb",
    package = "theia-runtime",
    version = _VERSION,
    description = "Theia runtime: the supervisor binary (run-time fabric)",
    section = "misc",
    files = {
        "//platform/supervisor/main:supervisor": "/opt/theia/bin/supervisor",
    },
)

# ── theia-runtime-dev (build) ────────────────────────────────────────────────
# Ships the runtime + tombstone as a CONSUMABLE BAZEL MODULE tree under
# /opt/theia/platform/... (NOT the legacy /opt/theia/src). With the module root
# (/opt/theia/MODULE.bazel = `pero_theia`, from theia-framework), a consuming
# workspace's `@pero_theia//platform/runtime:runtime`, `:runtime_proto_cc`, and
# `@pero_theia//platform/supervisor/tombstone:tombstone` resolve EXACTLY as in
# the repo — same labels, same workspace-relative paths. The trimmed module
# BUILD files (no test suite / dist filegroups) ship via `files`; the sources
# via `data` (short_path `platform/...` → /opt/theia/platform/...).
pkg_deb(
    name = "theia-runtime-dev_deb",
    package = "theia-runtime-dev",
    version = _VERSION,
    description = "Theia runtime dev: the pero_theia bazel module (runtime + tombstone sources + BUILD) + runtime .art",
    section = "devel",
    # libnanopb-dev: pb.h + libprotobuf-nanopb.a the runtime sources compile/link
    # against. build-essential: gcc/g++ for the workspace bazel build.
    depends = "theia-runtime, theia-framework, theia-system-dev, libnanopb-dev, build-essential",
    files = {
        # Trimmed module BUILD files at their real package paths.
        "//packaging/theia/module:runtime.BUILD.bazel":
            "/opt/theia/platform/runtime/BUILD.bazel",
        "//packaging/theia/module:tombstone.BUILD.bazel":
            "/opt/theia/platform/supervisor/tombstone/BUILD.bazel",
    },
    data = [
        # Runtime + tombstone SOURCES — short_path platform/... → /opt/theia/
        # platform/... (drops the old `src/` so the module paths match the repo).
        "//platform/runtime:runtime_dist_srcs",
        "//platform/supervisor/tombstone:tombstone_dist_hdrs",
        # NOTE: the supervisor .art (system.supervisor package) now ships in
        # theia-system-dev as part of the whole system/ tree — NOT here — so the
        # two debs don't both own /opt/theia/system/supervisor/*.
    ],
    prefix = "/opt/theia",
    strip_prefix = "",
)

# ── theia-services (machine) ─────────────────────────────────────────────────
# The ARA platform service binaries + the shared lib per links. No build files.
pkg_deb(
    name = "theia-services_deb",
    package = "theia-services",
    version = _VERSION,
    description = "Theia ARA platform services: com, per, sm, ucm, log, shwa (binaries)",
    section = "misc",
    # System .so's per's etcd stack pulls in at load time: grpc++ + the
    # reflection-capable protobuf + openssl (via libssl). The etcd client itself
    # is now STATICALLY linked into per (//third_party:etcd_cc → cmake()
    # libetcd-cpp-api-core.a), so there is no libetcd-cpp-api.so to bundle or
    # ship — and no cpprest dep (the async client isn't linked).
    depends = "theia-runtime, libgrpc++1, libprotobuf23",
    files = {
        "//services/com/main:com": "/opt/theia/bin/com",
        "//services/per/main:per": "/opt/theia/bin/per",
        "//services/sm/main:sm": "/opt/theia/bin/sm",
        "//services/ucm/main:ucm": "/opt/theia/bin/ucm",
        "//services/log/main:log": "/opt/theia/bin/log",
        "//services/shwa/main:shwa": "/opt/theia/bin/shwa",
    },
)

# ── theia-services-dev (build) ───────────────────────────────────────────────
# Everything a WORKSPACE needs from services to build/deploy against them: the
# generated service protos, the consolidated .art manifest tree (relink
# system/services → /opt/theia/services), and the Python manifest
# (manifest.services.{manifest,executor} — the orthogonal-ARA DeploymentLayer
# base + its supervisor sidecar). Folds in the former theia-services-manifest.
pkg_deb(
    name = "theia-services-dev_deb",
    package = "theia-services-dev",
    version = _VERSION,
    description = "Theia services development files: protos, .art manifest tree, Python manifest (manifest.py + executor.py sidecar)",
    section = "devel",
    depends = "theia-services, theia-framework",
    # The .art manifest tree → /opt/theia/services (relink system/services here).
    data = ["//system/services:services_manifest"],
    prefix = "/opt/theia/services",
    strip_prefix = "system/services",
    # protos → /opt/theia/proto/... ; the Python manifest → site-packages as the
    # PEP-420 namespace package `manifest.services` (importable once setup.bash
    # puts site-packages on PYTHONPATH — NO manifest/__init__.py so the namespace
    # spans the workspace's manifest.apps too). Explicit dests because they live
    # under different source roots than the .art `data` tree above.
    files = {
        "//platform/proto/system/services/com:com.proto": "/opt/theia/proto/system/services/com/com.proto",
        "//platform/proto/system/services/per:per.proto": "/opt/theia/proto/system/services/per/per.proto",
        "//platform/proto/system/services/sm:sm.proto": "/opt/theia/proto/system/services/sm/sm.proto",
        "//platform/proto/system/services/ucm:ucm.proto": "/opt/theia/proto/system/services/ucm/ucm.proto",
        "//platform/proto/system/services/log:log.proto": "/opt/theia/proto/system/services/log/log.proto",
        "//platform/proto/system/services/shwa:shwa.proto": "/opt/theia/proto/system/services/shwa/shwa.proto",
        "//manifest/services:__init__.py": "/opt/theia/lib/python3.10/site-packages/manifest/services/__init__.py",
        "//manifest/services:manifest.py": "/opt/theia/lib/python3.10/site-packages/manifest/services/manifest.py",
        "//manifest/services:executor.py": "/opt/theia/lib/python3.10/site-packages/manifest/services/executor.py",
    },
)

# ── theia-system-dev (build) ─────────────────────────────────────────────────
# The whole top-level `system/` tree — the .art CONTRACTS (services, supervisor,
# platform runtime, the tdb client model) at their FQN-mirrored paths
# (/opt/theia/system/services/<fc>/…, /opt/theia/system/tools/tdb/tdb.art) plus
# the .proto SOURCES under /opt/theia/platform/proto so a deb-installed host can
# materialize a probe-backed client (tdb / rtdb / rf-theia's supervisor adapter)
# straight from `$THEIA_ROOT/system/tools/tdb/tdb.art` + proto_root
# `$THEIA_ROOT/platform/proto` — NO source checkout, NO sibling tools/ path.
#
# Why its own package: `system/` was consolidated out of the per-FC <component>/
# system/ dirs into one top-level tree; this deb ships that tree as a unit
# instead of scattering it across runtime-dev (supervisor.art) + services-dev
# (services .art only). It Depends on services-dev (the matching protos/manifest)
# and theia-framework (the artheia probe). The runtime control proto is laid out
# flat under platform_runtime/ (matching `import "platform_runtime/runtime.proto"`
# every consumer uses) so supervisor.proto's cross-package import resolves from
# the proto_root — the committed platform/proto/platform_runtime symlink doesn't
# survive packaging, so we place runtime.proto at that path explicitly.
pkg_deb(
    name = "theia-system-dev_deb",
    package = "theia-system-dev",
    version = _VERSION,
    description = "Theia system contracts: the full system/ .art tree (services + supervisor + tools/tdb) + .proto sources, for probe-backed clients (tdb/rtdb/rf-theia)",
    section = "devel",
    depends = "theia-services-dev, theia-framework",
    data = [
        # The entire system/ .art tree → /opt/theia/system/... (short_path
        # `system/...` mirrors the package FQN: system.services.<fc>,
        # system.supervisor, system.tools.tdb, system.platform.runtime).
        "//system:art_sources",
        # All service + supervisor .proto SOURCES → /opt/theia/platform/proto/...
        # (short_path `platform/proto/system/...`), the probe codec's proto_root.
        "//platform/proto:proto_sources",
    ],
    # The runtime control proto at the flat platform_runtime/ path the
    # `import "platform_runtime/runtime.proto"` convention resolves to under the
    # proto_root (the repo uses a symlink here; packaging places the real file).
    files = {
        "//platform/runtime:proto/platform_runtime/runtime.proto":
            "/opt/theia/platform/proto/platform_runtime/runtime.proto",
    },
    prefix = "/opt/theia",
    strip_prefix = "",
)

# Matching .ipk for the embedded/opkg path (dist/ipkg/). Same binary set; the
# runtime sources aren't shipped to embedded targets (they run prebuilt binaries),
# so the runtime ipk is binary-only (supervisor).
pkg_opkg(
    name = "theia-runtime_ipk",
    package = "theia-runtime",
    version = _VERSION,
    arch = "x86_64",
    description = "Theia runtime (supervisor binary) — embedded/opkg",
    files = {
        "//platform/supervisor/main:supervisor": "/opt/theia/bin/supervisor",
    },
)

pkg_opkg(
    name = "theia-services_ipk",
    package = "theia-services",
    version = _VERSION,
    arch = "x86_64",
    description = "Theia ARA platform services (binaries) — embedded/opkg",
    depends = "theia-runtime",
    files = {
        "//services/com/main:com": "/opt/theia/bin/com",
        "//services/per/main:per": "/opt/theia/bin/per",
        "//services/sm/main:sm": "/opt/theia/bin/sm",
        "//services/ucm/main:ucm": "/opt/theia/bin/ucm",
        "//services/log/main:log": "/opt/theia/bin/log",
        "//services/shwa/main:shwa": "/opt/theia/bin/shwa",
    },
)

# Convenience: build the bazel-buildable package set in one shot.
filegroup(
    name = "debs",
    srcs = [
        ":theia-runtime_deb",
        ":theia-runtime-dev_deb",
        ":theia-services_deb",
        ":theia-services-dev_deb",
        ":theia-system-dev_deb",
    ],
)

# Machine-only debs (a run-time target — no -dev build files).
filegroup(
    name = "machine_debs",
    srcs = [":theia-runtime_deb", ":theia-services_deb"],
)

filegroup(
    name = "ipks",
    srcs = [":theia-runtime_ipk", ":theia-services_ipk"],
)
